+ Added: Entries in gui locale file to change attribute color and format